# AlnSeqTree

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alnseq.cpp  alnseq.h  as2dm.cpp  as2dm.h  astree.cpp  astree.h  distmeth.cpp  distmeth.h
